--- a/site/templates/twig/mar/armain/roptm/sysop/list/list.twig
+++ b/site/templates/twig/mar/armain/roptm/sysop/list/list.twig
@@ -1,9 +1,9 @@
 <table class="table table-sm">
 	<thead>
 		<tr class="bg-dark text-white p-3">
-			<th class="pt-3 pb-3">Code</th>
-			<th class="pt-3 pb-3">Description</th>
-			<th class="pt-3 pb-3 text-right">
+			<th class="p-3">Code</th>
+			<th class="p-3">Description</th>
+			<th class="p-3 text-right">
 				<button class="btn btn-light btn-sm" data-toggle="modal" data-target="#edit-code-modal" data-json="">
 					<i class="fa fa-plus" aria-hidden="true"></i> Add
 				</button>
