--- a/site/templates/twig/mar/armain/roptm/sysop/list/list.twig
+++ b/site/templates/twig/mar/armain/roptm/sysop/list/list.twig
@@ -10,7 +10,7 @@
 			</th>
 		</tr>
 	</thead>
-	<tbody>
+	<tbody class="codes-list">
 		{% if codes.count() == 0 %}
 			<tr>
 				<td colspan="3" class="text-center bg-light">
