--- a/site/templates/twig/mar/armain/roptm/sysop/display.twig
+++ b/site/templates/twig/mar/armain/roptm/sysop/display.twig
@@ -1,6 +1,14 @@
+{% set response = roptm.getResponse() %}
+
 <div class="mb-3">
 	{% include 'mar/armain/roptm/bread-crumbs.twig' %}
 </div>
+
+{% if response %}
+	<div class="mb-3">
+		{% include 'code-tables/response.twig' %}
+	</div>
+{% endif %}
 
 <div class="card">
 	<div class="card-header bg-light">
