FIX: show unsaved alert if a new vio would be created

--- a/site/templates/twig/mvi/vio/form/form.twig
+++ b/site/templates/twig/mvi/vio/form/form.twig
@@ -1,4 +1,4 @@
-<form action="{{ input.url() }}" id="vio-user-form" method="POST">
+<form action="{{ input.url() }}" id="vio-user-form" method="POST" data-new="{{ user.isNew() ? 'true' : 'false' }}">
 	<input type="hidden" name="action" value="update">
 
 	<div class="mb-3">
