Add propel page in twig

--- a/site/templates/twig/mar/armain/roptm/list/page.twig
+++ b/site/templates/twig/mar/armain/roptm/list/page.twig
@@ -11,3 +11,5 @@
 {% endif %}
 
 {% include 'mar/armain/roptm/list/list.twig' %}
+
+{% include 'util/paginator/propel.twig' with {'pager': codes} %}
