--- a/site/templates/twig/mar/armain/roptm/list/.js.twig
+++ b/site/templates/twig/mar/armain/roptm/list/.js.twig
@@ -1,6 +1,9 @@
 $(function() {
-	{% if page.wire('input').get.offsetExists('focus') %}
-		$('tr[data-id="{{ page.wire('input').get.text('focus') }}"]').addClass('highlight');
-		$('html, body').animate({scrollTop: $('[data-id="{{ page.wire('input').get.text('focus') }}"]').offset().top,},700,'linear');
-	{% endif %}
+	var uri = URI();
+	var query = uri.query(true);
+
+	if (query.focus != '' && query.focus != 'new') {
+		$('tr[data-id="'+query.focus+'"]').addClass('highlight');
+		$('html, body').animate({scrollTop: $('tr[data-id="'+query.focus+'"]').offset().top,},700,'linear');
+	}
 });
