--- a/site/templates/twig/mar/armain/roptm/sysop/edit/js/classes/Alerts.js.twig
+++ b/site/templates/twig/mar/armain/roptm/sysop/edit/js/classes/Alerts.js.twig
@@ -7,4 +7,21 @@ class RoptmAlerts extends CodeAlerts {
 		}
 		return this.instance;
 	}
+
+	codeExists(code, callback) {
+		swal2.fire({
+			title: 'Code Exists',
+			text: 'Edit Code ' + code + '?',
+			icon: 'question',
+			showCancelButton: true,
+			confirmButtonText: 'Yes'
+		}).then(function (result) {
+			if (result.value) {
+				callback(true);
+				return true;
+			}
+			callback(false);
+			return false;
+		});
+	}
 }
