--- a/site/templates/twig/mar/armain/roptm/list/list.twig
+++ b/site/templates/twig/mar/armain/roptm/list/list.twig
@@ -26,14 +26,20 @@
 				<td>{{ code.force|yesorno|capitalize }}</td>
 				<td>{{ code.notecode }}</td>
 				<td class="text-center">
-					{% if sysopM.recordlocker.isLocked(sysopM.getRecordlockerKey(code)) == false or sysopM.recordlocker.userHasLocked(sysopM.getRecordlockerKey(code)) %}
-						<a href="{{ page.sysopUrl(code.id) }}" class="btn btn-warning btn-sm">
+					{% if code.isNote() %}
+						<button class="btn btn-sm btn-warning" disabled>
 							<i class="fa fa-pencil" aria-hidden="true"></i> Edit
-						</a>
+						</button>
 					{% else %}
-						<span class="badge badge-secondary">
-							<i class="fa fa-lock" aria-hidden="true"></i> Locked By {{ sysopM.recordlocker.getLockingUser(sysopM.getRecordlockerKey(code)) }}
-						</span>
+						{% if sysopM.recordlocker.isLocked(sysopM.getRecordlockerKey(code)) == false or sysopM.recordlocker.userHasLocked(sysopM.getRecordlockerKey(code)) %}
+							<a href="{{ page.sysopUrl(code.id) }}" class="btn btn-warning btn-sm">
+								<i class="fa fa-pencil" aria-hidden="true"></i> Edit
+							</a>
+						{% else %}
+							<span class="badge badge-secondary">
+								<i class="fa fa-lock" aria-hidden="true"></i> Locked By {{ sysopM.recordlocker.getLockingUser(sysopM.getRecordlockerKey(code)) }}
+							</span>
+						{% endif %}
 					{% endif %}
 				</td>
 			</tr>
