FEAT: add delelte URL

--- a/site/templates/twig/mar/armain/roptm/sysop/list/list.twig
+++ b/site/templates/twig/mar/armain/roptm/sysop/list/list.twig
@@ -33,7 +33,7 @@
 						<i class="fa fa-pencil" aria-hidden="true"></i> Edit
 					</button>
 					&nbsp; &nbsp;
-					<a href="{#{ page.codeDeleteUrl(code.code) #}" class="btn btn-danger btn-sm delete_button">
+					<a href="{{ page.codeDeleteUrl(code.sysop, code.id) }}" class="btn btn-danger btn-sm delete_button">
 						<i class="fa fa-trash" aria-hidden="true"></i> Delete
 					</a>
 				</td>
