--- a/site/templates/twig/warehouse/picking/unguided/scan/form.twig
+++ b/site/templates/twig/warehouse/picking/unguided/scan/form.twig
@@ -10,7 +10,7 @@
 					<i class="fa fa-search"></i>
 				</button>
 			</span>
-			<input type="text" name="scan" class="form-control" id="scan" placeholder="Barcode, ItemID, Lot/Serial #">
+			<input type="text" name="scan" class="form-control" id="scan" placeholder="Barcode, ItemID, Lot/Serial #" autofocus>
 			<span class="input-group-btn">
 				<button type="submit" class="btn btn-light">
 					<i class="fa fa-arrow-circle-right"></i> <span class="sr-only">Search</span>
