--- a/site/templates/twig/cart/items/provalley/list.twig
+++ b/site/templates/twig/cart/items/provalley/list.twig
@@ -8,7 +8,7 @@
 		</button>
 	</div>
 </div>
-<div class="bg-dark text-white font-weight-bold pt-3 px-3 pb-1">
+<div class="bg-dark text-white font-weight-bold p-3">
 	<div class="row">
 		<div class="col-sm-3">Item</div>
 		<div class="col-sm-1 text-right">Cases</div>
