--- a/site/templates/twig/sales-orders/sales-order/links-header.twig
+++ b/site/templates/twig/sales-orders/sales-order/links-header.twig
@@ -10,9 +10,15 @@
 				<i class="fa fa-user" aria-hidden="true"></i> {{ order.customer.name }}
 			</a>
 			&nbsp;
-			<a href="{{ page.printInvoiceUrl(order.ordernumber) }}" class="btn btn-primary" aria-label="Print Invoice" title="Print Invoice">
-				<i class="fa fa-print" aria-hidden="true"></i> Print Invoice
-			</a>
+			{% if order.isInvoiced() or order.isVerified() %}
+				<a href="{{ page.printInvoiceUrl(order.ordernumber) }}" class="btn btn-primary" aria-label="Print Invoice" title="Print Invoice">
+					<i class="fa fa-print" aria-hidden="true"></i> Print Invoice
+				</a>
+			{% else %}
+				<button class="btn btn-primary" disabled>
+					<i class="fa fa-print" aria-hidden="true"></i> Print Invoice
+				</button>
+			{% endif %}
 		</div>
 		<div class="col-sm-5 text-right">
 			{% if order.has_tracking() %}
