Return to Sysop list

--- a/site/templates/twig/mar/armain/roptm/sysop/display.twig
+++ b/site/templates/twig/mar/armain/roptm/sysop/display.twig
@@ -22,7 +22,7 @@
 			<div></div>
 			<div></div>
 			<div>
-				<a href="{{ input.url() }}" class="btn btn-sm btn-warning">
+				<a href="{{ page.roptmUrl(sysop.id) }}" class="btn btn-sm btn-warning">
 					<i class="fa fa-times" aria-hidden="true"></i> Close
 				</a>
 			</div>
