--- a/site/templates/twig/mar/armain/roptm/list/.js.twig
+++ b/site/templates/twig/mar/armain/roptm/list/.js.twig
@@ -1,8 +1,8 @@
 $(function() {
 	var uri = URI();
 	var query = uri.query(true);
-
-	if (query.focus != '' && query.focus != 'new') {
+	console.log(query);
+	if (query.hasOwnProperty('focus') && query.focus != '' && query.focus != 'new') {
 		$('tr[data-id="'+query.focus+'"]').addClass('highlight');
 		$('html, body').animate({scrollTop: $('tr[data-id="'+query.focus+'"]').offset().top,},700,'linear');
 	}
