FIX: make prepend a span not a button

--- a/site/templates/twig/cart/items/inputs/price.twig
+++ b/site/templates/twig/cart/items/inputs/price.twig
@@ -14,8 +14,8 @@
 					'data-itemid': detail.itemid,
 				}
 			},
-			'button': {
-				'colorclass': 'btn-light',
+			'span': {
+				'colorclass': 'bg-light',
 				'text': '$'
 			}
 		}
