--- a/site/templates/twig/cart/actions.twig
+++ b/site/templates/twig/cart/actions.twig
@@ -1,8 +1,9 @@
-<h5>Actions</h5>
-<div class="mt-4 mb-4">
-	<div class="row">
+
+<div class="pt-3">
+	<h5>Actions</h5>
+	<div class="form-row">
 		{% if user.has_function('eso') %}
-			<div class="col">
+			<div class="col-6 col-sm-4 mb-3">
 				<a href="{{ page.createOrderUrl() }}" class="btn btn-primary">
 					<span class="fa-stack fa-md" aria-hidden="true">
 						<i class="fa fa-usd fa-stack-1x"></i>
@@ -14,7 +15,7 @@
 			</div>
 		{% endif %}
 		{% if user.has_function('eqo') %}
-			<div class="col">
+			<div class="col-6 col-sm-4 mb-3">
 				<a href="{{ page.createQuoteUrl() }}" class="btn btn-primary">
 					<span class="fa-stack fa-md" aria-hidden="true">
 						<i class="fa fa-quote-left fa-stack-1x"></i>
@@ -25,7 +26,7 @@
 				</a>
 			</div>
 		{% endif %}
-		<div class="col">
+		<div class="col-6 col-sm-4 mb-3">
 			<a href="{{ page.emptyCartUrl() }}" class="btn btn-secondary">
 				<span class="fa-stack fa-md" aria-hidden="true">
 					<i class="fa fa-bars fa-stack-1x"></i>
