--- a/site/templates/twig/cart/items/list.twig
+++ b/site/templates/twig/cart/items/list.twig
@@ -8,7 +8,7 @@
 		</button>
 	</div>
 </div>
-<div class="bg-dark text-white font-weight-bold pt-3 px-3 pb-1">
+<div class="bg-dark text-white font-weight-bold p-3 d-none d-sm-block">
 	<div class="row">
 		<div class="col-sm-3">Item ID</div>
 		<div class="col-sm-2 text-right">Qty</div>
@@ -18,40 +18,5 @@
 	</div>
 </div>
 {% for detail in cart.getItems() %}
-	{% set item = cart.getItmItem(detail.itemid) %}
-
-	<form action="{{ input.url() }}" class="allow-enterkey-submit">
-		<input type="hidden" name="action" value="update-item-quick">
-		<input type="hidden" name="custID" value="{{ cart.getCustid() }}">
-		<input type="hidden" name="shiptoID" value="{{ cart.getShiptoid() }}">
-		<input type="hidden" name="linenbr" value="{{ detail.linenbr }}">
-		<input type="hidden" name="itemID" value="{{ detail.itemid }}">
-
-		<div class="form-row p-3 cart-item">
-			<div class="col-sm-4">
-				{{ detail.itemid }} <br>
-				<small>{{ detail.desc1 }}</small> <br>
-				<small>Avg Wgt: {{ item.weight }}</small>
-			</div>
-			<div class="col-sm-1 text-right">
-				{% include 'cart/items/inputs/qty.twig' %}
-			</div>
-			<div class="col-sm-2 text-right">
-				{% include 'cart/items/inputs/price.twig' %}
-			</div>
-			<div class="col-sm-2 text-right">
-				$ <span class="total-price">{{ detail.totalprice|currency }}</span>
-			</div>
-			<div class="col-sm-3 text-right">
-				<button type="submit" class="btn btn-sm btn-success">
-					<i class="fa fa-floppy-o" aria-hidden="true"></i> Save
-				</button>
-				&nbsp;
-				<a href="{{ page.deleteItemUrl(detail.linenbr) }}" class="btn btn-sm btn-danger delete_button">
-					<i class="fa fa-trash-o" aria-hidden="true"></i> Delete
-				</a>
-			</div>
-		</div>
-	</form>
-	<hr>
+	{% include 'cart/items/item.twig' %}
 {% endfor %}
