--- a/site/templates/twig/cart/items/provalley/list.twig
+++ b/site/templates/twig/cart/items/provalley/list.twig
@@ -8,7 +8,7 @@
 		</button>
 	</div>
 </div>
-<div class="bg-dark text-white font-weight-bold p-3">
+<div class="bg-dark text-white font-weight-bold p-3 d-none d-sm-block">
 	<div class="row">
 		<div class="col-sm-3">Item</div>
 		<div class="col-sm-1 text-right">Cases</div>
@@ -18,44 +18,6 @@
 		<div class="col-sm-3 "></div>
 	</div>
 </div>
-<div class="pb-3"></div>
 {% for detail in cart.getItems() %}
-	{% set item = cart.getItmItem(detail.itemid) %}
-
-	<form action="{{ page.url }}" class="allow-enterkey-submit">
-		<input type="hidden" name="action" value="update-item-quick">
-		<input type="hidden" name="linenbr" value="{{ detail.linenbr }}">
-
-		<div class="form-row px-3 cart-item">
-			<div class="col-sm-3">
-				{{ detail.itemid }}
-				<br>
-				<small>{{ detail.desc1 }}</small>
-				<br>
-				<small>Avg Wgt: {{ item.weight|number_format(cart.decimalPlacesQty()) }}</small>
-			</div>
-			<div class="col-sm-1 text-right">
-				{% include 'cart/items/inputs/qty.twig' %}
-			</div>
-			<div class="col-sm-1 text-right">
-				<span class="total-weight">{{ (item.weight * detail.qty)|number_format(cart.decimalPlacesQty()) }}</span>
-			</div>
-			<div class="col-sm-2 text-right">
-				{% include 'cart/items/inputs/price.twig' %}
-			</div>
-			<div class="col-sm-2 text-right">
-				$ <span class="total-price">{{ (item.weight * detail.qty * detail.price)|currency }}</span>
-			</div>
-			<div class="col-sm-3 text-right">
-				<button type="submit" class="btn btn-sm btn-success">
-					<i class="fa fa-floppy-o" aria-hidden="true"></i> Save
-				</button>
-				&nbsp;
-				<a href="{{ page.deleteItemUrl(detail.linenbr) }}" class="btn btn-sm btn-danger exclude">
-					<i class="fa fa-trash-o" aria-hidden="true"></i> Delete
-				</a>
-			</div>
-		</div>
-	</form>
-	<hr>
+	{% include 'cart/items/provalley/item.twig' %}
 {% endfor %}
