--- a/site/templates/twig/cart/lookup/js/classes.js.twig
+++ b/site/templates/twig/cart/lookup/js/classes.js.twig
@@ -3,3 +3,4 @@
 {% include 'cart/lookup/js/classes/Inputs.js.twig' %}
 {% include 'cart/lookup/js/classes/Form.js.twig' %}
 {% include 'cart/lookup/js/classes/Requests.js.twig' %}
+{% include 'cart/lookup/js/classes/PricingModal.js.twig' %}
