--- a/site/templates/twig/cart/lookup/js/classes/Inputs.js.twig
+++ b/site/templates/twig/cart/lookup/js/classes/Inputs.js.twig
@@ -13,5 +13,6 @@ class LookupInputs {
 		this.form = $('#' + this.id);
 		this.itemid = this.form.find('input[name=itemID]');
 		this.qty    = this.form.find('input[name=qty]');
+		this.price  = this.form.find('input[name=price]');
 	}
 }
