--- a/site/templates/twig/cart/lookup/form.twig
+++ b/site/templates/twig/cart/lookup/form.twig
@@ -69,6 +69,10 @@
 			<button type="submit" class="btn btn-primary">
 				<i class="fa fa-plus" aria-hidden="true"></i> Add
 			</button>
+			&nbsp; &nbsp;
+			<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#pricingModal" disabled>
+				<i class="fa fa-table" aria-hidden="true"></i> Pricing
+			</button>
 		</div>
 		<div class="col-sm-5"></div>
 	</div>
