--- a/site/templates/twig/quotes/quote/edit/items.twig
+++ b/site/templates/twig/quotes/quote/edit/items.twig
@@ -5,7 +5,7 @@
 	eqo                    modules\Eqo
 #}
 <h3 class="font-weight-bold text-secondary mt-4">Quote Items</h3>
-<div class="bg-dark text-white font-weight-bold p-3">
+<div class="bg-dark text-white font-weight-bold p-3 d-none d-sm-block">
 	<div class="form-row">
 		<div class="col-sm-4">Item ID</div>
 		<div class="col-sm-1">Qty</div>
